todas etapas dos exercicios conluidos, ficou mais fácil

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ input {
 }
 
 #product-name {
-  width: 280px;
+  width: 400px;
   margin-right: 15px;
   font-size: 18px;
 }
@@ -155,7 +155,9 @@ input::placeholder {
   color: var(--timberwolf-alpha);
 }
 
-/*elementos area resultado*/
+/*elementos area resultado da busca*/
+
+
 .search-result {
   display: flex;
   flex-direction: column;
@@ -209,8 +211,18 @@ input::placeholder {
   width: 50%;
 }
 
+.procuct-name {
+  font-weight: 700;
+}
+
 .product-buy {
   justify-content: flex-end;
+}
+
+.icon-error {
+  margin-right: 10px;
+  font-size: 26px;
+  color: var(--claret);
 }
 
 /*botão de compra*/
